// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`claimRewards > calls multicall correctly 1`] = `
[
  {
    "callData": "0x1e83409a0000000000000000000000003d759121234cd36f8124c21afe1c6852d2bed848",
    "target": "fake-vai-vault-address",
  },
  {
    "callData": "0x996cba680000000000000000000000003d759121234cd36f8124c21afe1c6852d2bed848000000000000000000000000b9e0e753630434d7863528cc73cb7ac638a7c8ff0000000000000000000000000000000000000000000000000000000000000000",
    "target": "fake-xvs-vault-address",
  },
  {
    "callData": "0x86df31ee0000000000000000000000003d759121234cd36f8124c21afe1c6852d2bed8480000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000000300000000000000000000000008e0a5575de71037ae36abfafb516595fe68e5e4000000000000000000000000d5c4c2e2facbeb59d0216d0595d63fcdc6f9a1a700000000000000000000000074469281310195a04840daf6edf576f559a3de80",
    "target": "fake-main-pool-comptroller-address",
  },
  {
    "callData": "0x04caeb100000000000000000000000003d759121234cd36f8124c21afe1c6852d2bed8480000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000000200000000000000000000000037a0ac901578a7f05379fc43330b3d1e39d0c40c00000000000000000000000075a10f0c415dccca275e8cdd8447d291a6b86f06",
    "target": "0xc0ffee254729296a45a3885639AC7E10F9d54979",
  },
  {
    "callData": "0xba437c6800000000000000000000000037a0ac901578a7f05379fc43330b3d1e39d0c40c0000000000000000000000003d759121234cd36f8124c21afe1c6852d2bed848",
    "target": "fake-prime-contract-address",
  },
  {
    "callData": "0xba437c6800000000000000000000000075a10f0c415dccca275e8cdd8447d291a6b86f060000000000000000000000003d759121234cd36f8124c21afe1c6852d2bed848",
    "target": "fake-prime-contract-address",
  },
]
`;

exports[`claimRewards > skips claims for which a contract address was not passed 1`] = `
[
  {
    "callData": "0x996cba680000000000000000000000003d759121234cd36f8124c21afe1c6852d2bed848000000000000000000000000b9e0e753630434d7863528cc73cb7ac638a7c8ff0000000000000000000000000000000000000000000000000000000000000000",
    "target": "fake-xvs-vault-address",
  },
  {
    "callData": "0x04caeb100000000000000000000000003d759121234cd36f8124c21afe1c6852d2bed8480000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000000200000000000000000000000037a0ac901578a7f05379fc43330b3d1e39d0c40c00000000000000000000000075a10f0c415dccca275e8cdd8447d291a6b86f06",
    "target": "0xc0ffee254729296a45a3885639AC7E10F9d54979",
  },
]
`;
